<?xml version="1.0"?>
<package format="3">
  <name>plan_manage</name>
  <version>0.0.0</version>
  <description>The fast_planner package</description>
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>path_searching</depend>
  <depend>bspline</depend>
  <depend>poly_traj</depend>
  <depend>bspline_opt</depend>
  <depend>traj_utils</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
